--- a/Doc/学习日志.md
+++ b/Doc/学习日志.md
@@ -24,3 +24,12 @@ DW卷积如下：
     
 ![avator](../Doc Pictures/DW.png)
 
+# 查看 tensor的值
+训练后产生的 loss和 accuracy都是tf.tensor类型
+在tf 1代中可以使用 tf.Session来查看tensor数值
+在tf 2代中没有 Session了，使用 tensor.numpy()即可查看其数值
+
+# tensorflow2.0 的训练方法
+在TensorFlow2.0中，训练一个神经网络模型主要有两种方式：
+1. 使用tf.keras模块的Model.fit()；
+2. 使用tf.GradientTape()求解梯度，这样可以自定义训练过程
